Fixed issue with footer links in showcase component where on small devices, long title goes outside of box

--- a/src/app/Showcase/Showcase.sass
+++ b/src/app/Showcase/Showcase.sass
@@ -124,7 +124,8 @@ footer
                 margin-top: 50px
 
             .column
-                width: 50%
+                +min(sm)
+                    width: 50%
             .next
                 padding-right: 20px
                 text-align: right
